--- a/PatckWorks/style.css
+++ b/PatckWorks/style.css
@@ -56,11 +56,13 @@ button{
     background-color: green;
     box-shadow: 2px;
     margin-left: 10px;
+    margin-right: 15px;
 }
 button:hover{
     background-color: gray;
     color: white;
     cursor: pointer;
+
 }
 img{
     width: 60px;
